--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "javascript app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode: development",
+    "build": "webpack --mode: production",
+    "start": "webpack-dev-server --mode: development --open"
   },
   "author": "daniel kapper",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.24.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "jquery": "^3.3.1"
   }
 }
